# 4mica-polygon-demo

./: .dockerignore  .env.default  .gitignore  .prettierrc.json  Cargo.toml  DEPLOYMENT.md  ENV_SETUP.md  README.md  docker-compose.yml  index.html  package.json  tsconfig.node.json  vite.config.js
data/hls/: big-buck-bunny.m3u8  big-buck-bunny102.ts  big-buck-bunny105.ts  big-buck-bunny109.ts  big-buck-bunny110.ts  big-buck-bunny112.ts  big-buck-bunny113.ts  big-buck-bunny117.ts  big-buck-bunny12.ts  big-buck-bunny121.ts  big-buck-bunny124.ts  big-buck-bunny125.ts  big-buck-bunny126.ts  big-buck-bunny127.ts  big-buck-bunny128.ts  big-buck-bunny129.ts  big-buck-bunny13.ts  big-buck-bunny131.ts  big-buck-bunny135.ts  big-buck-bunny137.ts  big-buck-bunny138.ts  big-buck-bunny139.ts  big-buck-bunny141.ts  big-buck-bunny143.ts  big-buck-bunny144.ts  big-buck-bunny145.ts  big-buck-bunny146.ts  big-buck-bunny148.ts  big-buck-bunny149.ts  big-buck-bunny15.ts  big-buck-bunny150.ts  big-buck-bunny155.ts  big-buck-bunny158.ts  big-buck-bunny161.ts  big-buck-bunny163.ts  big-buck-bunny164.ts  big-buck-bunny165.ts  big-buck-bunny166.ts  big-buck-bunny169.ts  big-buck-bunny174.ts  (+77 more)
docker/: Dockerfile.server  Dockerfile.signer  Dockerfile.web
server/: Cargo.toml
server/src/: error.rs  fs.rs  io.rs  lib.rs  main.rs
server/src/http/: config.rs  mod.rs  model.rs  router.rs  x402.rs
server/src/x402/: config.rs  facilitator.rs  fourmica.rs  mod.rs  model.rs  native.rs
signer-server/: index.js  stress-test.js
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
(+124 files in other folders)
