[package]
name = "server"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
base64 = "0.22.1"
chrono = "0.4.42"
dotenv = "0.15.0"
env_logger = "0.11.8"
envconfig = "0.11.0"
http = "1.4.0"
log = "0.4.28"
parking_lot = "0.12.5"
reqwest = { version = "0.12.24", features = ["stream"] }
sdk-4mica = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.6.7", features = ["fs", "cors"] }
url = "2.5.7"
